feat (stocklet): all database methods
all baseline functionality is implemented

todo: testing
